# advanced-programming-assignment

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/ticket_tracker/: cli.py  database.py  exceptions.py
src/ticket_tracker/models/: __init__.py  ticket.py
src/ticket_tracker/repositories/: __init__.py  ticket_repository.py
src/ticket_tracker/schemas/: __init__.py  ticket.py
src/ticket_tracker/services/: __init__.py  sprint_planner.py  ticket_service.py
src/ticket_tracker/utils/: __init__.py  dependency_graph.py
tests/: conftest.py  test_blocked_tickets.py  test_cli_database_helpers.py  test_cycle_detection.py  test_dependency_logic.py  test_integration.py  test_sprint_planning.py  test_validation.py
