[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "ticket-tracker"
version = "0.1.0"
description = "A Python CLI MVP for ticket tracking with dependencies and sprint planning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "typer>=0.24.1,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=7.1.0,<8",
  "ruff>=0.15.11,<1.0",
]

[project.scripts]
ticket-tracker = "ticket_tracker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_tracker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov-report=term-missing"

[tool.coverage.run]
source = ["ticket_tracker"]

[tool.coverage.report]
omit = ["tests/*"]
